# SMHM

./: .gitignore  LICENSE  README.md  TODO.md  bld.bat  build.sh  conda_environment.yml  meta.yaml  setup.py
python/: setup.cfg  setup.py
python/src/SMHM/: HistoricalMunicipalMapper.py
python/src/SMHM/utils/: validation.py
python/tests/: README.md  test_HistoricalMunicipalMapper.py  tests.py
