[metadata]
name = SMHM
version = 0.1.0
description = Swiss Municipalities Historical Mapper
author = sondale-git
long_description = file: .../README.md
long_description_content_type = text/markdown
license= MIT,
url = https://github.com/sondale-git/SMHM

[options]
package_dir =
    = src
packages = SMHM
install_requires =
    pandas
    requests
    numpy


